# pyoj

./: Caddyfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docker/compose/: docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
docker/test/: Dockerfile  entrypoint.sh
docker/web/: Dockerfile  Dockerfile.dockerignore
docker/worker/: Dockerfile  Dockerfile.dockerignore  entrypoint.sh
judger/: __init__.py  logger.py
judger/cgroup/: __init__.py  cgroup.py
judger/cgroups/: __init__.py  base.py  cpuacct.py  exceptions.py  memory.py
judger/compile/: __init__.py  compile.py  result.py
judger/execute/: __init__.py  exceptions.py  execute.py  result.py
judger/language/: __init__.py  base.py  c.py  cpp.py  python.py
judger/ptrace/: __init__.py  constants.py  decorators.py  exceptions.py  ptrace.py  requests.py  types.py
judger/tests/: test_python3.py
judger/utils/: mount.py  system_call.py
scripts/: test-judger.sh
scripts/compose/: development.sh  production.sh
web/: logger.py  main.py
web/core/: database.py  decorators.py  dependencies.py  migration.py  pg_notify_listen.py  settings.py  startup.py
web/models/: __init__.py  base.py  language.py  problem.py  submission.py  systemcall.py  user.py
web/routers/: auth.py  language.py  problem.py  submission.py  systemcall.py  user.py
web/schemas/: __init__.py  auth.py  base.py  pagination.py  sort.py  user.py  utils.py
web/schemas/language/: __init__.py
web/schemas/problem/: __init__.py  types.py  validator.py
web/services/: auth.py  exception.py  exceptions.py  language.py  problem.py  submission.py  systemcall.py  task.py  testcase.py  user.py
web/tests/: conftest.py  test_auth_api.py  test_migration.py  test_problem_api.py  test_testcase_api.py  test_user_api.py
worker/: __init__.py  backends.py  database.py  logger.py  settings.py  tasks.py
worker/tasks/: __init__.py  compile.py  execute.py  parse_systemcall.py  prepare.py
(+11 files in other folders)
