[tool.poetry]
name = "pyoj"
version = "0.1.0"
description = "Python based Online Judge"
authors = ["hyoseok0604 <janghs0604@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
celery = "^5.3.6"
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
psycopg = {extras = ["binary"], version = "^3.1.17"}


[tool.poetry.group.test.dependencies]
ruff = "^0.1.13"
pyright = "^1.1.345"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[tool.poetry.group.web.dependencies]
fastapi = {extras = ["all"], version = "^0.109.0"}
alembic = "^1.13.1"
alembic-postgresql-enum = "^1.0.2"
bcrypt = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]